[package]
name = "cryptonomicon"
version = "0.1.0"
authors = ["Sean Bruton <sean@unnecessary.engineering>"]
edition = "2018"
publish = false
description = "Easy-to-use cryptographic library"
homepage = "https://labs.unnecessary.engineering/cryptonomicon"
repository = "https://github.com/UnnecessaryEngineering/cryptonomicon"
readme = "README.md"
keywords = ["pki", "x509", "certificate"]
categories = ["api-bindings", "cryptography", "data-structures", "embedded", "no-std"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "UnnecessaryEngineering/cryptonomicon", branch = "master", service = "github" }
codecov = { repository = "UnnecessaryEngineering/cryptonomicon", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "UnnecessaryEngineering/cryptonomicon" }
is-it-maintained-open-issues = { repository = "UnnecessaryEngineering/cryptonomicon" }
maintenance = { status = "actively-developed" }

[dependencies]
cryptonomicon-asymmetric = { path = "../asymmetric", optional = true }
cryptonomicon-elliptic = { path = "../elliptic", optional = true }
cryptonomicon-pkcs10 = { path = "../pkcs10", optional = true }
cryptonomicon-x500 = { path = "../x500", optional = true }
cryptonomicon-x509 = { path = "../x509", optional = true }

[features]
asymmetric = ["cryptonomicon-asymmetric"]
elliptic = ["asymmetric", "cryptonomicon-elliptic"]
pkcs10 = ["asymmetric", "cryptonomicon-pkcs10"]
x500 = ["cryptonomicon-x500"]
x509 = ["x500", "cryptonomicon-x509"]